--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           class="point-n-time d-flex justify-content-between fs-3 text-success hidden"
         >
           <div class="time">Thời gian: 0</div>
-          <div class="point">Điểm 0</div>
+          <div class="point">Điểm <span>0</span></div>
         </div>
         <div
           class="question-inner d-flex justify-content-center flex-wrap"
@@ -48,6 +48,7 @@
         <div class="notify text-success fs-3"></div>
       </div>
     </div>
+    <div class="total-correct hidden">0</div>
     <script type="module" src="./js/script.js"></script>
   </body>
 </html>
